--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: Cargo build
+name: Coverage
 
 on:
   push:
@@ -12,9 +12,9 @@ jobs:
       CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
     steps:
       - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: stable
+          toolchain: nightly
       - name: Setup node
         uses: actions/setup-node@v3
         with:
@@ -35,12 +35,10 @@ jobs:
       - name: napi build
         run: cd scylla_pg_js && npm run build
 
-      - name: component test
-        run: cargo test -- --include-ignored   
-
-      - run: cargo test --examples
-      - run: cargo doc --no-deps
-
+      - run: rustup component add llvm-tools-preview
+      - run: curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar jxf -
+      - run: PATH=$PATH:$(pwd) bin/coverage-report.sh
+      - run: bash <(curl -s https://codecov.io/bash) -f lcov.info
       # - run: bin/clippy-pedantic.sh
       # - run: >
       #     if [ $(bin/is-release.sh) = "1" ]; then 
