--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 LOCAL_HOST_IP=$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}')
 
 RUST_VERSION=1.61.0
-\
-PGHOST=$LOCAL_HOST_IP
-PGPORT=5432
-PGUSER=
-PGPASSWORD=
-PGDATABASE=
+
+PG_HOST=$LOCAL_HOST_IP
+PG_PORT=
+PG_USER=
+PG_PASSWORD=
+PG_DATABASE=
 
