--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
   "scylla_operations",
   "scylla_pg_lib",
   "scylla_pg_monitor",
-  "scylla_pg_js"
+  "scylla_pg_js",
+  "scylla_pg_core"
 ]
