--- a/scylla_pg_core/Cargo.toml
+++ b/scylla_pg_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scylla_pg_monitor"
+name = "scylla_pg_core"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,10 +13,10 @@ chrono = "0.4"
 dotenv = "0.15"
 config = "0.13"
 serde = "1.0"
-
+tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
+deadpool-postgres = { version = "0.10", features = ["serde"] }
 
 # db migrations
-tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
 refinery = {version="0.8", features=["tokio-postgres"]}
 
 # crate dependencies
