--- a/scylla_pg_lib/Cargo.toml
+++ b/scylla_pg_lib/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 postgres = "0.19.3"
-once_cell = "1.12.0"
 tokio = { version = "1.19.2", features = ["full"] }
 deadpool-postgres = { version = "0.10", features = ["serde"] }
 tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
@@ -18,11 +17,10 @@ uuid = { version = "1", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 mockall = "0.11.3"
 async-trait = "0.1"
-# Logging
-log = { version = "0.4", features = ["kv_unstable", "std", "kv_unstable_serde"] }
-env_logger = "0.9"
+dotenv = "0.15"
 # db migrations
 refinery = {version="0.8", features=["tokio-postgres"]}
 # crate depencies
 scylla_models = { path = "../scylla_models" }
 scylla_operations = { path = "../scylla_operations" }
+scylla_pg_core = { path = "../scylla_pg_core" }
