--- a/scylla_pg_monitor/Cargo.toml
+++ b/scylla_pg_monitor/Cargo.toml
@@ -15,10 +15,11 @@ config = "0.13"
 serde = "1.0"
 
 
-# db migrations
+# db
 tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
-refinery = {version="0.8", features=["tokio-postgres"]}
+
 
 # crate dependencies
 scylla_models = { path = "../scylla_models" }
 scylla_pg_lib = { path = "../scylla_pg_lib" }
+scylla_pg_core = { path = "../scylla_pg_core" }
