--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,22 +26,17 @@ jobs:
       - name: Running Migrations 
         run: PATH=$PATH:$(pwd) bin/component-test-setup.sh
 
-      - name: cargo build 
-        run: cargo build
+      # - name: cargo build 
+      #   run: cargo build
       
-      - name: npm install
-        run: cd scylla_pg_js && npm install
+      # - name: npm install
+      #   run: cd scylla_pg_js && npm install
 
-      - name: napi build
-        run: cd scylla_pg_js && npm run build
+      # - name: napi build
+      #   run: cd scylla_pg_js && npm run build
 
       - run: rustup component add llvm-tools-preview
       - run: curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar jxf -
       - run: PATH=$PATH:$(pwd) bin/coverage-report.sh
       - run: bash <(curl -s https://codecov.io/bash) -f lcov.info
-      # - run: bin/clippy-pedantic.sh
-      # - run: >
-      #     if [ $(bin/is-release.sh) = "1" ]; then 
-      #         cargo install cargo-get
-      #         bin/publish-all.sh
-      #     fi
+
