--- a/scylla_pg_monitor/Cargo.toml
+++ b/scylla_pg_monitor/Cargo.toml
@@ -23,3 +23,7 @@ tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-
 scylla_models = { path = "../scylla_models" }
 scylla_pg_lib = { path = "../scylla_pg_lib" }
 scylla_pg_core = { path = "../scylla_pg_core" }
+
+[dev-dependencies]
+scylla_operations = {path = "../scylla_operations"}
+async-trait = "0.1"
