--- a/scylla_pg_js/package.json
+++ b/scylla_pg_js/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "@scylla/pg_js",
-  "version": "0.0.1",
-  "description": "Scylla task scheduler javascript binding.for postgres",
+  "name": "scylla_pg_client",
+  "version": "0.1.0",
+  "description": "Scylla task scheduler, javascript binding.for postgres",
   "type": "module",
   "engines": {
     "node": ">=14.16.1",
     "npm": ">=6.14.12"
   },
-  "dependencies": {
-    "jest": "^27.5.0",
-    "uuidv4": "^6.2.12"
-  },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.kindredgroup.com:7999/krp/scylla.git"
+    "url": "https://github.com/kindredgroup/scylla.git"
   },
-  "author": "",
-  "license": "UNLICENSED",
+  "author": "Anil Sharma",
+  "email": "asharmaanil@gmail.com",
+  "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.12.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest": "^27.5.0",
+    "uuidv4": "^6.2.12"
   },
   "napi": {
     "name": "scylla"
