fix: added multi arch support and divide js client into separate pkg
fix: add npm yml file


fix build yml


npm ci updated


fix: change yarn to npm
fix remove yarn


update npm.yml


update install script


fix: update artifacts path


fix: another fix in npm yml


with no target passed


pass target to cargo build


fix: add test script


fixing the test


fixing pg_js test


fix test script


move docker compose steps in ci pipeline
fix: remove npmrc


commit index.yml


fix npm yml


fix as per error messages


remove potgres docker compose in windows


add docker compose again in universal step

--- a/scylla_pg_js/Cargo.toml
+++ b/scylla_pg_js/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scylla_pg_js"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 
@@ -8,14 +8,14 @@ edition = "2021"
 crate-type = ["cdylib"]
 [dependencies]
 # lib for napi bindings
-napi = { version = "2", features = [
+napi = { version = "2.10.3", features = [
     "async",
     "tokio_rt",
     "napi8",
     "chrono_date",
     "serde-json",
 ] }
-napi-derive = { version = "2" }
+napi-derive = "2.9.3"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
