--- a/scylla_pg_js/package.json
+++ b/scylla_pg_js/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "scylla_pg_client",
-  "version": "0.1.0",
-  "description": "Scylla task scheduler, javascript binding.for postgres",
-  "type": "module",
-  "engines": {
-    "node": ">=14.16.1",
-    "npm": ">=6.14.12"
+  "name": "scylla_pg_js",
+  "version": "0.1.1",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "napi": {
+    "name": "scylla_pg_js",
+    "triples": {
+      "additional": [
+        "aarch64-apple-darwin",
+        "universal-apple-darwin"
+      ]
+    }
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kindredgroup/scylla.git"
-  },
-  "author": "Anil Sharma",
-  "email": "asharmaanil@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "@napi-rs/cli": "^2.12.0",
-    "cross-env": "^7.0.3",
-    "jest": "^27.5.0",
-    "uuidv4": "^6.2.12"
+    "@napi-rs/cli": "^2.14.0",
+    "ava": "^4.3.3",
+    "uuid": "^9.0.0"
   },
-  "napi": {
-    "name": "scylla"
+  "ava": {
+    "timeout": "3m"
+  },
+  "engines": {
+    "node": ">= 10"
   },
   "scripts": {
-    "build": "napi build --release --dts type.d.ts",
-    "build:debug": "napi build --dts type.d.ts",
-    "testbase": "cross-env NODE_ENV=testing node --no-warnings --experimental-specifier-resolution=node --experimental-vm-modules --enable-source-maps",
-    "test": "npm run testbase -- node_modules/.bin/jest --passWithNoTests --collectCoverage index.test.js",
-    "test-js": "jest index.test.js",
-    "node:base": "node --no-warnings --experimental-specifier-resolution=node --experimental-vm-modules --enable-source-maps --harmony-top-level-await",
-    "bundle:packages": "npm run node:base -- deployment/npm/bundle-npm.mjs"
+    "artifacts": "napi artifacts",
+    "build": "napi build --platform --release",
+    "build:debug": "napi build --platform",
+    "test": "ava",
+    "universal": "napi universal",
+    "version": "napi version"
   },
-  "jest": {
-    "verbose": true
-  }
+  "packageManager": "yarn@3.3.1"
 }
