--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -99,6 +99,10 @@ jobs:
       - run: colima start
         if: ${{ matrix.settings.host == 'macos-latest' }}
 
+      - name: Test bindings
+        run: cd scylla_pg_js && npm run test
+        if: ${{ matrix.settings.host != 'windows-latest' }}
+
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
