--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -106,6 +106,12 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    environment: publish
+    env:
+      CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
+      DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     needs:
       - build
     steps:
@@ -129,7 +135,5 @@ jobs:
       - name: Publish
         run: |
           cd scylla_pg_js && npm publish --tag next --access public
-        environment: publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
