--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -133,9 +133,8 @@ jobs:
         run: cd scylla_pg_js && npm run artifacts
       - run: ls -R ./scylla_pg_js/npm
       - run: ls -R ./scylla_pg_js/artifacts
-        shell: bash
       - name: Publish
-      - run: >
+        run: >
           if [ $(bin/is-release.sh) = "1" ]; then
             PATH=$PATH:$(pwd) bin/docker-push.sh
             PATH=$PATH:$(pwd) bin/npm-release.sh
