--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -105,7 +105,7 @@ jobs:
           if-no-files-found: error
   publish:
     name: Publish
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     environment: publish
     env:
       CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
