--- a/scylla_pg_client/package.json
+++ b/scylla_pg_client/package.json
@@ -22,6 +22,10 @@
   },
   "main": "index.js",
   "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
   "scripts": {
     "build": "tsc"
   }
