--- a/scylla_pg_js/package.json
+++ b/scylla_pg_js/package.json
@@ -18,12 +18,12 @@
     "ava": "^4.3.3",
     "uuid": "^9.0.0"
   },
-  "dependencies": {
-    "scylla_pg_js-darwin-universal": "0.1.4",
-    "scylla_pg_js-darwin-arm64": "0.1.4",
-    "scylla_pg_js-darwin-x64": "0.1.4",
-    "scylla_pg_js-darwin-linux-x64-gnu": "0.1.4",
-    "scylla_pg_js-darwin-win32-x64-msvc": "0.1.4"
+  "optionalDependencies": {
+    "scylla_pg_js-darwin-universal": "~0.1.3",
+    "scylla_pg_js-darwin-arm64": "~0.1.3",
+    "scylla_pg_js-darwin-x64": "~0.1.3",
+    "scylla_pg_js-darwin-linux-x64-gnu": "~0.1.3",
+    "scylla_pg_js-darwin-win32-x64-msvc": "~0.1.3"
   },
   "ava": {
     "timeout": "3m"
