--- a/scylla_pg_client/package.json
+++ b/scylla_pg_client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scylla_pg_client",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "description": "Scylla task scheduler, javascript binding.for postgres",
   "engines": {
     "node": ">=14.16.1",
@@ -14,11 +14,14 @@
   "email": "asharmaanil@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "scylla_pg_js": "0.1.1"
+    "scylla_pg_js": "0.1.5"
+
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "ava": "^4.3.3",
+    "uuid": "^9.0.0"
   },
   "main": "index.js",
   "types": "index.d.ts",
@@ -27,6 +30,7 @@
     "index.d.ts"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "ava"
   }
 }
