--- a/scylla_pg_client/tsconfig.json
+++ b/scylla_pg_client/tsconfig.json
@@ -1,12 +1,37 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "CommonJS",
-    "lib": ["es2017", "es7", "es6", "dom"],
+    "baseUrl": ".",
+    "outDir": "dist",
+    "rootDir": ".",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
+    "alwaysStrict": true,
     "declaration": true,
-    "outDir": "./",
+    "downlevelIteration": false,
+    "emitDecoratorMetadata": false,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "lib": [ "esnext" ],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "newLine": "LF",
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "preserveConstEnums": false,
+    "removeComments": false,
+    "resolveJsonModule": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true
+    "strictBindCallApply": true,
+    "strictNullChecks": true,
+    "stripInternal": true,
+    "target": "ES2020",
   },
   "exclude": [
     "../node_modules",
