--- a/scylla_pg_client/tsconfig.json
+++ b/scylla_pg_client/tsconfig.json
@@ -1,40 +1,17 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "dist",
-    "rootDir": ".",
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false,
-    "alwaysStrict": true,
-    "declaration": true,
-    "downlevelIteration": false,
-    "emitDecoratorMetadata": false,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "lib": [ "esnext" ],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "newLine": "LF",
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "preserveConstEnums": false,
-    "removeComments": false,
-    "resolveJsonModule": true,
-    "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
+    "target": "ES2018",
     "strict": true,
-    "strictBindCallApply": true,
-    "strictNullChecks": true,
-    "stripInternal": true,
-    "target": "ES2020",
+    "moduleResolution": "node",
+    "module": "CommonJS",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "esModuleInterop": true,
+    "allowJs": true,
+    "outDir": "dist",
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": [
-    "../node_modules",
-    "dist"
-  ]
+  "include": ["./**/*.js", "./**/*.mjs", "./**/*.ts", "./**/*.tsx"],
+  "files": ["index.js"],
+  "exclude": ["node_modules", "dist"]
 }
