--- a/scylla_pg_client/tsconfig.json
+++ b/scylla_pg_client/tsconfig.json
@@ -13,5 +13,5 @@
   },
   "include": ["./**/*.js", "./**/*.mjs", "./**/*.ts", "./**/*.tsx"],
   "files": ["index.js"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules"]
 }
