fix: prepublishOnly removed from publish script

--- a/scylla_pg_client/package.json
+++ b/scylla_pg_client/package.json
@@ -46,6 +46,6 @@
   "scripts": {
     "build": "tsc",
     "test": "ava",
-    "prepublishonly": "esbuild --minify --outfile=dist/index.js --allow-overwrite dist/index.js "
+    "prepublishOnly": "esbuild --minify --outfile=dist/index.js --allow-overwrite dist/index.js "
   }
 }
