--- a/scylla_pg_js/package.json
+++ b/scylla_pg_js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scylla_pg_js",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
@@ -34,5 +34,12 @@
     "version": "napi version",
     "prepublishOnly": "napi prepublish -t npm && esbuild --minify --outfile=index.js --allow-overwrite index.js"
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "optionalDependencies": {
+    "scylla_pg_js-win32-x64-msvc": "0.1.10",
+    "scylla_pg_js-darwin-x64": "0.1.10",
+    "scylla_pg_js-linux-x64-gnu": "0.1.10",
+    "scylla_pg_js-darwin-arm64": "0.1.10",
+    "scylla_pg_js-darwin-universal": "0.1.10"
+  }
 }
